Fix 1px shift

--- a/assets/component-product-list.css
+++ b/assets/component-product-list.css
@@ -179,6 +179,7 @@ img {
   color: #AC1229;
   font-weight: 700;
   padding-bottom: 4px;
+  margin-bottom: -1px;
 }
 
 .section-featured-product .page-width {
